--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,1 +1,25 @@
 @import "~bootstrap/scss/bootstrap";
+
+.title {
+  margin-bottom: 60px;
+}
+
+.collapsed {
+  color: #000;
+}
+
+.nav-link {
+  color: #6693F5;
+}
+
+.form {
+  &-input {
+    margin-bottom: 20px;
+
+    &-title {
+      margin-bottom: 20px;
+      color: #6693F5;
+      font-size: 20px;
+    }
+  }
+}
