--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,7 +9,7 @@
 }
 
 .nav-link {
-  color: #6693F5;
+  color: #6693f5;
 }
 
 .form {
@@ -18,8 +18,44 @@
 
     &-title {
       margin-bottom: 20px;
-      color: #6693F5;
+      color: #6693f5;
       font-size: 20px;
+    }
+  }
+}
+
+.history {
+  &-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    p{
+      margin: 0;
+    }
+  }
+  &-cross {
+    position: relative;
+    width: 16px;
+    height: 16px;
+    opacity: 0.3;
+    &:hover {
+      opacity: 1;
+    }
+    &:before,
+    &:after {
+      position: absolute;
+      left: 15px;
+      content: " ";
+      height: 16px;
+      width: 2px;
+      background-color: #000;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(-45deg);
     }
   }
 }
